# APD

laboratoare/lab01/: add_serial.c  example.c
laboratoare/lab02/: barrier.c  multiply_inner.c  multiply_middle.c  multiply_outer.c  mutex.c  strassen_par.c
laboratoare/lab03/: merge.c  oets.c  shear.c
laboratoare/lab04/src/bug3/: MyThread.java
laboratoare/lab04/src/bug5/: MyThreadA.java  MyThreadB.java
laboratoare/lab08/ex1/: Makefile  ex1.cpp
laboratoare/lab08/ex2/: Makefile  ex2.cpp
laboratoare/lab08/ex3/: Makefile  ex3.cpp
laboratoare/lab08/ex4/: Makefile  ex4.cpp
laboratoare/lab08/ex5/: Makefile  ex5.cpp
laboratoare/lab08/ex6/: Makefile  ex6.cpp
laboratoare/lab09/broadcast/: broadcast.c
laboratoare/lab09/pipeline sort/: pipeline_sort.c
laboratoare/lab09/polynomial/: polynomial.c
laboratoare/lab09/ranksort/: ranksort.c
laboratoare/lab09/reduce/: reduce.c
laboratoare/lab09/scan/: scan.c
laboratoare/lab10/: main.c
laboratoare/lab11/ex1/: Makefile  ring.cpp
laboratoare/lab11/ex2/: barrier.c
laboratoare/lab11/ex4/: queue.c
teme/tema1/: README
teme/tema1/sol/: CMakeLists.txt  Makefile  genetic_algorithm.c  genetic_algorithm.h  individual.h  tema1.c
teme/tema2/: README
teme/tema2/skel/: MapReduce.java  Output.java  TaskMap.java  TaskReduce.java  Tema2.java
teme/tema3/: README
teme/tema3/sol/: Makefile  tema3.c
testpractic/C/: Makefile  README  ranksort.c  template.c  test.c
testpractic/MPI/: template.cpp
testpractic/MPI/mapreduce_mpi/: Makefile  mapreduce.cpp
testpractic/MPI/testapd/: Makefile  test.cpp
(+55 files in other folders)
